--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-spring/web": "^9.7.3",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "formik": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
