--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
     "@react-spring/web": "^9.7.3",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
