--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
+    "@mui/x-date-pickers": "^6.14.0",
     "@react-spring/web": "^9.7.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
@@ -20,13 +21,17 @@
     "dotenv": "^16.3.1",
     "formik": "^2.4.3",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
+    "react-date-range-ts": "^1.6.1",
     "react-dom": "^18.2.0",
+    "react-multi-date-picker": "^4.3.1",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
