--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-date-range-ts": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-multi-date-picker": "^4.3.1",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
