--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.8",
+    "@mui/styles": "^5.15.0",
     "@mui/x-date-pickers": "^6.14.0",
     "@react-spring/web": "^9.7.3",
     "@types/react-router-dom": "^5.3.3",
@@ -20,12 +21,14 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.3",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-date-range-ts": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-multi-date-picker": "^4.3.1",
     "react-router-dom": "^6.16.0",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "@types/react": "^18.2.15",
     "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -42,6 +46,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^5.0.10"
   }
 }
